@@ -1,3 +1,6 @@
+4 December 2015: Ralph
+	- Removed unneeded whitespace from example.conf.
+
 3 December 2015: Ralph
 	- (after rc1 tag)
 	- Committed fix to qname minimisation and unit test case for it.
